@@ -360,6 +360,22 @@
 				Algorithmus und der Festplattencache von Windows die Anzeige
 				zu beschleunigen.
 				</para>
+				<para>
+				Wenn Sie die rekursiven überlagerten Icons für bestimmte
+				Ordner ausschalten möchten, können Sie das tun indem Sie
+				eine Datei mit Namen <filename>_tsvnexcluderecursive</filename>
+				in diesem Ordner erstellen. Dies deaktiviert die Rekursion
+				für diesen Ordner allein, jedoch nicht für die Dateien/Ordner
+				innerhalb dieses Ordners.
+				</para>
+				<para>
+				Sie können die überlagerten Icons auch komplett ausschalten
+				für einen bestimmten Ordner, indem Sie eine Datei mit
+				Namen <filename>_tsvnexcludethis</filename> in diesem
+				Ordner erstellen. Und auch hier gilt, die überlagerten Icons
+				werden nur für diesen Ordner deaktiviert, nicht für die
+				Ordner innerhalb dieses Ordners.
+				</para>
 				</tip>
 			</para>
 			<para>
