@@ -16,6 +16,8 @@
        in Subversion automatically when saving. (Stefan)
 - ADD: In the log dialog you now can select log messages
        and copy them to the clipboard. (Stefan)
+- ADD: The overlay/columns can be disabled for specific
+       folders by placing special files in them. (Stefan)
 - CHG: Searching in the log dialog now also searches
        the changed paths. (Stefan)
 - CHG: The locatorbar in TME shows the current view range
